Create Landing Page using html and css

--- a/index.html
+++ b/index.html
@@ -5,60 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="header">
-      <div class="header_logo">Header Logo</div>
-      <div class="header_links">
+      <span id="header_logo">Header Logo</span>
+      <div class="links">
         <a href="#">header link one</a>
         <a href="#">header link two</a>
         <a href="#">header link three</a>
       </div>
     </div>
-    <div class="first">
-      <div class="left">
+    <div class="main">
+      <div class="main_left">
         <h1>This website is awesome</h1>
         <p>
           This website has some subtext that goes here under the main title.
-          It's smaller font and the color is lower contrast
+          It's a smaller font and color is lower contrast
         </p>
         <button>Sign up</button>
       </div>
-      <div class="right">
+      <div class="main_right">
         <img
-          src="https://images.unsplash.com/photo-1663619207118-00cfad465479?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
-          alt="This is an image of a desert"
+          src="https://images.unsplash.com/photo-1663619207118-00cfad465479?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDl8NnNNVmpUTFNrZVF8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+          alt=""
         />
       </div>
     </div>
-    <div class="second">
-      <h2>Some random information.</h2>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="sub">this is some subtext under an illustration or image</div>
-      <div class="sub">this is some subtext under an illustration or image</div>
-      <div class="sub">this is some subtext under an illustration or image</div>
-      <div class="sub">this is some subtext under an illustration or image</div>
+    <div class="section">
+      <h2>Some Random information</h2>
+      <div class="container">
+        <div class="info">
+          <div class="box"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <div class="box"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <div class="box"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <div class="box"></div>
+          <p>This is some subtext under an illustration or image</p>
+        </div>
+      </div>
     </div>
-    <div class="third">
-      <blockquote>
+    <div class="article">
+      <p>
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice
-      </blockquote>
-      <div class="author">-Thor, God of Thunder</div>
+        All I know is that it looks nice.
+        <span>-Thor, God of Thunder</span>
+      </p>
     </div>
-    <div class="fourth">
+    <div class="summary">
       <div class="card">
-        <div class="leftt">
+        <div class="card_left">
           <h3>Call to action! It's time!</h3>
           <p>
             Sign up for our product by clicking that button right over there!
           </p>
         </div>
-        <div class="rightt">
+        <div class="card_right">
           <button>Sign up</button>
         </div>
       </div>
